--- a/pom.xml
+++ b/pom.xml
@@ -83,6 +83,7 @@
 
     <build>
         <plugins>
+            <!-- Jib plugin (si lo necesitas) -->
             <plugin>
                 <groupId>com.google.cloud.tools</groupId>
                 <artifactId>jib-maven-plugin</artifactId>
@@ -94,6 +95,7 @@
                 </configuration>
             </plugin>
 
+            <!-- Compiler plugin -->
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
@@ -108,7 +110,7 @@
                 </configuration>
             </plugin>
 
-            <!-- ✅ Plugin añadido para generar MANIFEST con Main-Class -->
+            <!-- Jar plugin (para definir Main-Class) -->
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-jar-plugin</artifactId>
@@ -121,8 +123,25 @@
                     </archive>
                 </configuration>
             </plugin>
+
+            <!-- ✅ Spring Boot plugin: este es el que hace el fat jar -->
+            <plugin>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-maven-plugin</artifactId>
+                <executions>
+                    <execution>
+                        <goals>
+                            <goal>repackage</goal>
+                        </goals>
+                    </execution>
+                </executions>
+                <configuration>
+                    <mainClass>com.testGrupoCastilla.TestGrupoCastillaApplication</mainClass>
+                </configuration>
+            </plugin>
         </plugins>
     </build>
+
 
 
 </project>
